♻️💄 @apply available styles

--- a/src/assets/styles/utilities.postcss
+++ b/src/assets/styles/utilities.postcss
@@ -1,3 +1,8 @@
 .bg-image {
 	@apply bg-cover bg-center flex-no-shrink flex;
 }
+
+.animate, a, button {
+	transition-duration: 250ms;
+	transition-property: background-color border-color box-shadow color;
+}
