--- a/src/assets/styles/tailwind.postcss
+++ b/src/assets/styles/tailwind.postcss
@@ -1,7 +1,7 @@
-@import 'tailwindcss/preflight';
+@import '~tailwindcss/preflight.css';
 
-@import 'tailwindcss/components';
+@import '~tailwindcss/components.css';
 
-@import 'tailwindcss/utilities';
+@import '~tailwindcss/utilities.css';
 
-@import 'utilities.postcss';
+@import './utilities.postcss';
