--- a/src/assets/styles/utilities.postcss
+++ b/src/assets/styles/utilities.postcss
@@ -6,3 +6,7 @@
 	transition-duration: 250ms;
 	transition-property: background-color border-color box-shadow color;
 }
+
+.flex-grow-all {
+	flex-grow: 9 !important;
+}
