--- a/src/assets/styles/utilities.postcss
+++ b/src/assets/styles/utilities.postcss
@@ -6,6 +6,10 @@
 	flex-grow: 9 !important;
 }
 
+.scroll {
+	@apply h-full overflow-y-scroll scrolling-touch;
+}
+
 /* Animate */
 
 .animation-duration {
